--- a/resources/css/profissional-estudos.css
+++ b/resources/css/profissional-estudos.css
@@ -19,114 +19,6 @@ main {
     justify-content: center;
 }
 
-/* Carousel =======================================================*/
-
-.slider {
-    width: 100%;
-    height: 500px;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 5.5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-}
-
-.slides {
-    width: 500%;
-    height: 800px;
-    display: flex;
-    margin-top: 3rem;
-}
-
-.slides input {
-    display: none;
-}
-
-.slide {
-    width: 20%;
-    transition: 2s;
-}
-
-.slide img {
-    width: 100%;
-    height: 500px;
-}
-
-.navigation-manual{
-    position: absolute;
-    width: 800px;
-    margin-top: 30rem;
-    margin-left: 15rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.manual-btn{
-    border: 2px solid rgb(83, 79, 79);
-    padding: 0.5rem;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.manual-btn:not(:last-child){
-    margin-right: 1rem;
-}
-
-.manual-btn:hover {
-    background: black;
-}
-
-#radio1:checked ~ .first {
-    margin-left: 0;
-}
-#radio2:checked ~ .first {
-    margin-left: -20%;
-}
-#radio3:checked ~ .first {
-    margin-left: -40%;
-}
-#radio4:checked ~ .first {
-    margin-left: -60%;
-}
-
-.navigation-auto {
-    position: absolute;
-    display: flex;
-    width: 800px;
-    justify-content: center;
-    margin-top: 30rem;
-    margin-left: 15rem;
-}
-
-.navigation-auto div {
-    border: 2px solid;
-    padding: 0.5rem;
-    border-radius: 10px;
-    transition: 1s;
-}
-
-.navigation-auto div:not(:last-child) {
-    margin-right: 1rem;
-}
-
-#radio1:checked ~ .navigation-auto .auto.btn1 {
-    background: gray;
-}
-
-#radio2:checked ~ .navigation-auto .auto.btn2 {
-    background: gray;
-}
-
-#radio3:checked ~ .navigation-auto .auto.btn3 {
-    background: gray;
-}
-
-#radio4:checked ~ .navigation-auto .auto.btn4 {
-    background: gray;
-}
-
 /* caixa de montagem */ 
 #box1 {
     position: absolute;
@@ -212,4 +104,10 @@ p{
     margin-top: 15px;
 }
  
+@media(min-width: 1150px) {
+    .caixas {
+        display: flex;
+        flex-direction: column;
+    }
+}
 
