--- a/resources/css/fortnite.css
+++ b/resources/css/fortnite.css
@@ -16,6 +16,7 @@ h1 {
     justify-content: center;
     flex-direction: column;
     margin-top: 3rem;
+    border: 1px solid black;
     margin-left: 25%;
     margin-right: 25%;
     border-radius: 2px;
