--- a/resources/css/gtav.css
+++ b/resources/css/gtav.css
@@ -19,6 +19,9 @@ h1 {
     border: 1px solid black;
     margin-left: 25%;
     margin-right: 25%;
+    border-radius: 2px;
+    background: #fdfdfdda;
+    box-shadow: 1px 1px 1px 2px rgb(0 0 0 / 0.50);
 }
 
 #vb, #vm, #pr, #ram {
