--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -14,9 +14,20 @@ header {
     box-shadow: 0 0 0.5rem 0 rgba(0,0,0,1);
 }
 
+#simulador {
+    font-size: 1.3rem;
+    margin-top: 0.6rem;
+    margin-right: 2.5rem;
+    font-weight: 800;
+}
+
+#simulador:hover {
+    animation: headShake;
+    animation-duration: 2s;
+}
+
 .menu {
     font-size: 1.3rem;
-    width: 100%;
     height: 1.3rem;
     margin-bottom: 0.6rem;
     z-index: 1;
