--- a/resources/css/simulador.css
+++ b/resources/css/simulador.css
@@ -5,24 +5,29 @@
     font-family: 'Poppins';
 }
 
-#container {
+#title {
+    background: rgba(128, 128, 128, 0.5);
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1.7rem;
-    margin-top: 1.5rem;
+    justify-content: center;
 }
 
-section{
-    margin: 3rem;
-    text-shadow: 1rem rgba(0, 0, 0, 2rem);
+#title h2 {
+    font-weight: 550;
 }
 
-.processador {
-    font-size: 1.2rem;
+#container {
+    margin: 3rem 0 0 3rem;
 }
 
-.processador1 {
-    
+#processador {
+    display: flex;
 }
 
+#processador p {
+    margin: 0.4rem 0 0 1.8rem;
+    background: rgba(128, 128, 128, 0.301);
+    padding: 0.5rem 5rem 0.5rem 5rem;
+    text-align: center;
+    border-radius: 3.5rem;
+    font-size: 1.1rem;
+}
