--- a/resources/css/simulador.css
+++ b/resources/css/simulador.css
@@ -33,6 +33,7 @@
 }
 
 #setinha img{
-    margin-top: 0rem;
-    margin-left: 15.5rem;
+    margin: 1.9rem;
+    margin-top: -15rem;
+    margin-left: 15.7rem;
 }
