--- a/resources/css/simulador.css
+++ b/resources/css/simulador.css
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0.3rem 0 0 1.8rem;
+    margin: 0.3rem 0 0 2.5rem;
     background: rgba(128, 128, 128, 0.301);
     width: 22rem;
     text-align: center;
@@ -37,8 +37,8 @@
     font-size: 1.1rem;
 }
 
-#processador img:last-child{
-    margin: 0.8rem 0 0 -2.5rem;
+#processador .imagem-seta img{
+    margin: 0.9rem 0 0 -2.5rem;
     width: 28px;
     height: 28px;
 }
@@ -49,16 +49,57 @@
     flex-direction: column;
 }
 
-.lista-simulador{
+.lista-simulador li{
     list-style: none;
-    margin: 0 0 2rem 11rem;
-    
+    padding: .5rem 2.8rem 1.8rem 0;
 }
 
- .lista-simulador li{
+.menu-simulador ul ul {
+    position: absolute;
     visibility: hidden;
-    margin: 0.5rem 0 0 0;
-    border: 1px solid black;
-    width: 15%;
+    transition: .5s;
+}
+
+.menu-simulador ul:hover {
+    zoom: 103%;
+}
+
+.menu-simulador ul li:hover ul{
+    visibility: visible;
+    transition: .3s;
+    padding: .5rem 0 0 0;
     z-index: 1;
+}
+
+.menu-simulador .lista-simulador {
+    display: block;
+    margin: 0 0 0 -24.5rem;
+    border: 1px solid black;
+    background: #fafbfc;
+}
+
+/* container do total das peças */
+
+.total {
+    background: rgba(128, 128, 128, 0.171);
+    display: flex;
+    flex-direction: column;
+    justify-content: initial;
+    align-items: center;
+    width: 12rem;
+    height: 5rem;
+    margin-top: -26rem;
+    margin-left: 62rem;
+}
+
+.total #texto-total {
+    margin-top: 1rem;
+    color: rgb(21, 138, 21);
+    font-weight: 600;
+}
+
+.total #divisao {
+    background: rgb(102, 228, 102);
+    width: 100%;
+    height: 3px;
 }
