--- a/resources/css/simulador.css
+++ b/resources/css/simulador.css
@@ -47,6 +47,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
+    border-radius: .7rem;
 }
 
 .lista-simulador li{
@@ -62,17 +63,17 @@
 .menu-simulador ul ul {
     position: absolute;
     visibility: hidden;
-    transition: .5s;
+    transition: .2s;
 }
 
 .menu-simulador ul li:hover {
-    zoom: 103%;
+    zoom: 102%;
     cursor: pointer;
 }
 
 .menu-simulador ul li:hover ul{
     visibility: visible;
-    transition: .3s;
+    transition: .2s;
     padding: .5rem 0 0 0;
     z-index: 1;
 }
@@ -108,6 +109,8 @@
     align-items: center;
     width: 12rem;
     height: 5rem;
+    border-radius: .5rem;
+    box-shadow: .2rem .2rem .2rem .2rem rgba(0, 0, 0, .2);
 }
 
 .total #texto-total {
@@ -120,4 +123,52 @@
     background: rgb(102, 228, 102);
     width: 100%;
     height: 3px;
+}
+
+/* Botão final do simulador */
+
+#montar-final {
+    display: flex;
+    justify-content: center;
+    margin: 7rem 0 0 30rem;
+}
+
+#montar-final #botao-montar {
+    padding: 1rem 1.5rem;
+    border: 1px solid black;
+    background: rgba(128, 128, 128, 0.171);
+    border-radius: .6rem;
+}
+
+#montar-final #botao-montar:hover {
+    background: rgba(128, 128, 128, 0.342);
+    zoom: 1.1;
+    cursor: pointer;
+}
+
+/* Informações extras */
+
+#informacoes-extras {
+    /* visibility: hidden; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: rgba(128, 128, 128, 0.342);
+    margin: 20rem 1rem 1.5rem 2rem;
+    width: 95%;
+    height: 20rem;
+    border: 1px solid black;
+    border-radius: .5rem;
+}
+
+#informacoes-extras h3 {
+    margin-top: .8rem;
+}
+
+#informacoes-extras p {
+    margin-top: 1.8rem;
+}
+
+#container-informacoes {
+    margin-top: 3rem;
 }
