--- a/resources/css/gtav.css
+++ b/resources/css/gtav.css
@@ -19,9 +19,9 @@ h1 {
     border: 1px solid black;
     margin-left: 25%;
     margin-right: 25%;
-    border-radius: 2px;
     background: #fdfdfdda;
-    box-shadow: 1px 1px 1px 2px rgb(0 0 0 / 0.50);
+    box-shadow: .4rem .4rem rgba(0, 0, 0, .4);
+    border-radius: .8rem;
 }
 
 #vb, #vm, #pr, #ram {
@@ -31,4 +31,27 @@ h1 {
     justify-content: center;
     align-items:center;
     font-weight: 500;
+}
+
+/* Botão de voltar para a montagem gamer */
+
+#voltar-games {
+   display: flex;
+   justify-content: center;
+   margin: 5rem 0 0 0;
+}
+
+#voltar-games a {
+    text-decoration: none;
+    color: black;
+    background: rgba(151, 151, 151, 0.212);
+    padding: 1rem 1rem;
+    border-radius: .8rem;
+    border: 1px solid black;
+    font-size: 1.1rem;
+}
+
+#voltar-games a:hover {
+    zoom: 102%;
+    background: rgba(151, 151, 151, 0.397);
 }
