--- a/resources/css/profissional-estudos.css
+++ b/resources/css/profissional-estudos.css
@@ -8,15 +8,16 @@
 
 body {
     background: white;
+    overflow: hidden;
 }
 
 main {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* caixa de montagem */ 
@@ -44,16 +45,12 @@ main {
   }
 
   #caixa img{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-left: -9.5rem;
+    position: absolute;
+    margin: 2.5rem 0 0 0;
   }
 
   #caixa .medio{
-    display: flex;
-    justify-content: center;
-    margin-left: -10rem;
+    margin: 2.5rem 0 0 .3rem;
   }
 
   #caixa .tituloavançado{
@@ -62,35 +59,33 @@ main {
     margin-left: 7.5rem;
   }
 
-  #caixa .avançado{
-    display: flex;
-    justify-content: center;
-    margin-left: -13rem;
+  #caixa .avancado{
+    margin: 2.5rem .6rem 0 0;
   }
 
   #caixa input{
-      display: flex;
-      justify-content: center;
-      margin-top: 12rem;
-      margin-left: -12rem;
+      margin: 13rem 0 0 6rem;
+      position: absolute;
   }
 
   #caixa label{
-      display: flex;
-      justify-content: center;
-      margin-top: 11.90rem;
-      margin-left: -2rem;
+    position: absolute;
+    margin: 12.6rem 0 0 7.5rem;
   }
 
   #caixa p{
-      display: flex;
-      justify-content: center;
-      margin-top: 15rem;
-      margin-left: -13rem;
+    position: absolute;
+    margin: 16rem 0 0 -.8rem;
   }
 
 
 /* botão */
+
+#container-botao {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.8rem;
+}
 
 .button {
     position: center;
@@ -102,7 +97,7 @@ main {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-    width: 200px;
+  width: 172px;
 	padding:20px 50px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #000000;
