--- a/resources/css/profissional-estudos.css
+++ b/resources/css/profissional-estudos.css
@@ -100,13 +100,14 @@ main {
     padding:20px 50px;
     text-decoration:none;
     text-shadow:0px 1px 0px #000000;
+    z-index: 1;
 }
 .button:hover {
     background-color:#888888;
 }
 .button:active {
-    position:relative;
-    top:1px;
+  position: relative;
+  top:1px;
 }
 
 #warning{
