--- a/resources/css/games.css
+++ b/resources/css/games.css
@@ -7,17 +7,6 @@
 }
 
 /* Imagens ========================================================= */
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 6rem;
-    position: relative;
-    overflow: hidden;
-    margin-right: 6rem;
-    margin-top: 3rem;
-}
-
 .titulo {
     display: flex;
     justify-content: center;
@@ -25,29 +14,74 @@
 }
 
 .slider {
-    display: flex;
-    width: 2500px;
-    height: 400px;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    height: 250px;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
 }
 
-.slider img {
-    margin-right: 5rem;
-    transition: .5s;
+.slider-track {
+    display: flex;
+    width: calc(250px * 20);
+    animation: scroll 40s linear infinite;
+}
+
+.slider-track:hover {
+    animation-play-state: paused;
 }
 
 .slide {
-    position: relative;
-    animation: slide 20s;
-    animation-delay: 2s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+    height: 200px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    perspective: 100px;
 }
 
-.slide img:hover {
-    zoom: 102%;
+a, img {
+    width: 100%;
+    transition: transform 1s;
 }
+
+a:hover {
+    transform: translateZ(20px);
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-250px * 10));
+    }
+}
+
+.slider::before,
+.slider::after {
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%);
+    content: '';
+    height: 100%;
+    position: absolute;
+    width: 15%;
+    z-index: 2;
+}
+
+.slider::before {
+    left: 0;
+    top: 0;
+}
+
+.slider::after {
+    right: 0;
+    top: 0;
+    transform: rotateZ(180deg);
+}
+
 
 /* setas =================================== */
 
