--- a/resources/css/simulador.css
+++ b/resources/css/simulador.css
@@ -1,10 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins';
-}
-
 main {
     margin-bottom: 7rem;
 }
@@ -180,7 +173,7 @@ html {
     align-items: center;
     flex-direction: column;
     background: rgba(128, 128, 128, 0.342);
-    margin: 20rem 1rem 1.5rem 2rem;
+    margin: 20rem auto 1.5rem auto;
     width: 95%;
     height: 20rem;
     border: 1px solid black;
@@ -226,14 +219,12 @@ html {
 }
 
 @media(max-width: 730px){
-        #total-container{
-        margin-top: 3rem;
-        margin-left: 8.5rem;
+    #total-container{
+        margin: auto;
     }
 
     #montar-final{
-       margin-top: 4rem;
-       margin-left: 8.5rem;
+        margin: 25px auto;
 
     }
 }
